<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/nav_appointments"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/tab_appointments" />
    <item
        android:id="@+id/nav_records"
        android:icon="@drawable/ic_nav_records"
        android:title="@string/tab_records" />
    <item
        android:id="@+id/nav_ai"
        android:icon="@drawable/ic_nav_ai"
        android:title="@string/tab_ai" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/tab_chat" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/tab_profile" />
</menu>
