<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/tab_dashboard" />
    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/tab_schedule" />
    <item
        android:id="@+id/nav_patients"
        android:icon="@drawable/ic_nav_patients"
        android:title="@string/tab_patients" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/tab_chat" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/tab_profile" />
</menu>
